Solved bug too large text mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1312,7 +1312,7 @@ a.brand:focus{
 }
 
 .display-2{
-  font-size: 4.7rem;
+  font-size: 4.0rem;
   font-weight: 600;
   line-height: 1;
   letter-spacing: -0.05em;
